--- a/src/styles/FarmListings.css
+++ b/src/styles/FarmListings.css
@@ -119,7 +119,7 @@ hr.custom-hr {
 
 /* Suggestions for Filter Input */
 .suggestions {
-  position: absolute;
+  position: relative;
   background-color: white;
   border: 1px solid #dfe6e9;
   border-radius: 6px;
@@ -127,7 +127,8 @@ hr.custom-hr {
   overflow-y: auto; /* Scrollable if there are many options */
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   z-index: 1000; /* Ensure it is on top of other elements */
-  width: 250px
+  width: 250px;
+  margin-top: 0;
 }
 
 .suggestions li {
