--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -325,3 +325,22 @@ textarea{
   font-family: 'Courier New', Courier, monospace;
   font-size: 15px;
 }
+.refund{
+  margin-top: 20px;
+  border-radius: 5px;
+  padding: 7px;
+  background-color: rgb(209, 231, 8);
+  border: 1px solid black;
+  color: rgb(25, 0, 0);
+  font-size: 15px;
+  cursor: pointer;
+}
+.viewfarm{
+  margin-left: 20px;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid black;
+  background-color: green;
+  color: white;
+  text-decoration: none;
+}
