--- a/src/styles/CampaignDetails.css
+++ b/src/styles/CampaignDetails.css
@@ -146,6 +146,17 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.invest-button-full{
+  padding: 15px 25px;
+  font-size: 20px;
+  background-color: #fdfdfd;
+  color: rgb(255, 0, 0);
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  font-weight: 500;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
 
 .invest-button:hover {
   background-color: #0056b3;
