--- a/src/styles/CreateCampaign.css
+++ b/src/styles/CreateCampaign.css
@@ -60,6 +60,7 @@ body {
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s;
+    width: 106%;
   }
   
   .submit-button:hover {
