profile page address section updated

--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -1,125 +1,17 @@
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-slide-up {
+  animation: slide-up 0.3s ease-out;
+}
 body {
-  background-color: #f9f9f9;
-  font-family: 'Arial', sans-serif;
-}
-
-.profile-container {
-  background-color: #ffffff;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  max-width: 800px;
-  margin: 40px auto;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 500px;
-}
-
-.profile-image {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  overflow: hidden;
-  margin: 0 auto;
-  border: 4px solid #ff1100;
-  position: relative;
-}
-
-.profile-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.upload-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  z-index: 150;
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  color: #ffffff;
-}
-
-.profile-image:hover .upload-icon {
-  opacity: 1;
-  background-color: rgb(255, 0, 0);
-}
-.profile-image:hover{
-  opacity: 0.7;
-}
-
-.profile-name {
-  font-size: 1.5rem;
-  color: #333;
-  margin: 10px 0;
-}
-.profile-name span{
-  padding-left: 20px;
-}
-.profile-name .edit-icon{
-  /* padding-left: 20px; */
-  font-size: 20px;
-}
-.profile-email {
-  color: #666;
-  margin: 5px 0;
-}
-
-.edit-icon {
-  margin-left: 10px;
-  cursor: pointer;
-  color: #0400ff;
-}
-
-.profile-update-section {
-  margin-top: 20px;
-  text-align: left;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.profile-update-section input {
-  width: 100%;
-  padding: 10px;
-  margin: 5px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.profile-update-section button {
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 15px;
-  cursor: pointer;
-  /* margin-top: 10px; */
-}
-
-.profile-update-section button:hover {
-  background-color: #0056b3;
-}
-.editable{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
+  overflow-y: scroll;
 }
